Fix most of axe issues except color contrast

--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -18,7 +18,7 @@
   font-family: 'Staatliches', cursive;
 }
 
-.slogan-container h4 {
+.slogan-container h2 {
   font-size: 30px;
   font-family: 'Open Sans Condensed', sans-serif;
   letter-spacing: 1px;
